# flink-agents

./: .asf.yaml  .gitignore  .licenserc.yaml  NOTICE  README.md  pom.xml
python/: MANIFEST.in  jar_manifest.json  pyproject.toml
python/_build_backend/: backend.py
python/_build_backend/tests/: test_backend.py
python/flink_agents/: __init__.py
python/flink_agents/api/: agent.py  chat_message.py  configuration.py  core_options.py  decorators.py  event.py  execution_enviroment.py  execution_environment.py  memory_object.py  memory_reference.py  memoryobject.py  metric_group.py  prompt.py  resource.py  resource_context.py  runner_context.py  skills.py  version_compatibility.py  workflow.py
python/flink_agents/api/agents/: agent.py  react_agent.py  types.py
python/flink_agents/api/agents/tests/: test_row_schema.py
python/flink_agents/api/chat_models/: chat_model.py  java_chat_model.py
python/flink_agents/api/chat_models/tests/: test_token_metrics.py
python/flink_agents/api/embedding_models/: embedding_model.py  java_embedding_model.py
python/flink_agents/api/events/: chat_event.py  context_retrieval_event.py  event.py  tool_event.py
python/flink_agents/api/memory/: long_term_memory.py
python/flink_agents/api/memory/tests/: test_long_term_memory.py
python/flink_agents/api/prompts/: prompt.py  utils.py
python/flink_agents/api/skills/: __init__.py  agent_skill.py  prompt.py  skill_manager.py  skill_parser.py  skill_registry.py  skill_repository.py  skill_tools.py
python/flink_agents/api/skills/repository/: __init__.py  (+4 more)
python/flink_agents/api/tests/: test_decorators.py  test_event.py  test_memoryobject.py  test_prompt.py  test_resource_name.py  test_tool.py  test_version_compatibility.py
python/flink_agents/api/tools/: mcp.py  tool.py  utils.py
python/flink_agents/api/vector_stores/: java_vector_store.py  vector_store.py
python/flink_agents/e2e_tests/: chat_model_example.py  chat_model_integration_agent.py  chat_model_integration_test.py  flink_integration_agent.py  flink_intergration_test.py  from_datastream_to_table.py  integrate_datastream_with_agent_example.py  integrate_table_with_agent_example.py  integrate_table_with_react_agent_example.py  long_term_memory_test.py  my_agent.py  ollama_prepare_utils.py  python_event_logging_test.py  react_agent_example.py  react_agent_test.py  react_agent_tools.py  test_utils.py  workflow_test.py
python/flink_agents/e2e_tests/e2e_tests_integration/: agent_skills_test.py  built_in_action_async_execution_test.py  chat_model_integration_agent.py  chat_model_integration_test.py  event_log_test.py  execute_test.py  execute_test_agent.py  flink_integration_agent.py  flink_intergration_test.py  long_term_memory_test.py  python_event_logging_test.py  react_agent_test.py  workflow_test.py
python/flink_agents/e2e_tests/e2e_tests_resource_cross_language/: chat_model_cross_language_agent.py  chat_model_cross_language_test.py  embedding_model_cross_language_agent.py  embedding_model_cross_language_test.py  vector_store_cross_language_agent.py  vector_store_cross_language_test.py
python/flink_agents/e2e_tests/mcp/: mcp_example.py  mcp_server.py
python/flink_agents/e2e_tests/mcp_test/: mcp_server.py  mcp_test.py
python/flink_agents/e2e_tests/scripts/: ollama_pull_model.sh
python/flink_agents/examples/: agent_example.py  chat_model_example.py  chat_ollama_exmaple.py  common_tools.py  integrate_datastream_with_agent_example.py  integrate_table_with_agent_example.py  integrate_table_with_react_agent_example.py  my_agent.py  rag_agent_example.py  react_agent_example.py  skill_example.py  stream_agent_declaration.py  streaming_agent_example.py  workflow_example.py
python/flink_agents/examples/quickstart/: product_improve_suggestion.py  product_review_analysis.py  react_agent_example.py  workflow_multiple_agent_example.py  workflow_single_agent_example.py
python/flink_agents/examples/rag/: knowledge_base_setup.py  rag_agent_example.py
python/flink_agents/integrations/chat_models/: chat_model_utils.py  ollama_chat_model.py  tongyi_chat_model.py
python/flink_agents/integrations/embedding_models/: openai_embedding_model.py  tongyi_embedding_model.py
python/flink_agents/integrations/mcp/: mcp.py  utils.py
python/flink_agents/integrations/skills/: skill_manager.py  skill_parser.py
python/flink_agents/plan/: action.py  agent_plan.py  configuration.py  function.py  resource_provider.py  utils.py  workflow_plan.py
python/flink_agents/plan/actions/: action.py  chat_model_action.py  context_retrieval_action.py  tool_call_action.py  utils.py
python/flink_agents/plan/tests/: test_action.py  test_agent_plan.py  test_configuration.py  test_function.py  test_resource_provider.py  test_workflow_plan.py
python/flink_agents/plan/tools/: function_tool.py
python/flink_agents/runtime/: agent_runner.py  durable_execution.py  flink_memory_object.py  flink_metric_group.py  flink_runner_context.py  local_execution_environment.py  local_memory_object.py  local_runner.py  python_java_utils.py  remote_execution_environment.py  resource_cache.py  resource_context.py  workflow_runner.py
python/flink_agents/runtime/java/: java_chat_model.py  java_embedding_model.py  java_resource_wrapper.py  java_vector_store.py
python/flink_agents/runtime/memory/: chroma_long_term_memory.py  compaction_functions.py  internal_base_long_term_memory.py  reduce_functions.py  vector_store_long_term_memory.py
python/flink_agents/runtime/skill/: __init__.py  agent_skill.py  skill_manager.py  skill_parser.py  skill_prompt_provider.py  skill_repository.py  skill_tools.py
python/flink_agents/runtime/tests/: test_built_in_actions.py  test_durable_execution.py  test_flink_runner_context_reconcilable.py  test_get_resource_in_action.py  test_local_execution_environment.py  test_local_memory_object.py  test_local_runner_reconcilable.py  test_memory_reference.py  test_remote_execution_environment.py  test_runner_context_execute.py
python/requirements/: all_requirements.txt  build_requirements.txt  linter_requirements.txt  test_requirements.txt
(+906 files in other folders)
